# craftd

./: .gitignore  .gitmodules  AUTHORS  COPYING  Doxyfile  INSTALL  Makefile  Makefile.am  Makefile.debug  README  Rakefile  autogen.sh  configure  configure.ac  craftd.conf  craftd.conf.dist.in  motd.conf.dist
build-aux/: .gitignore
extras/: build.sh  cppcheck.sh  minecraftdos.rb  uncrustify.conf  valgrind.sh
htdocs/: LICENSES.txt  Makefile.am  help.html  index.html  logs.html  logs_graphs.html  players.html  players_blacklist.html  schedule.html  settings.html  settings_account.html
htdocs/css/: default.css
htdocs/js/: custom.js  excanvas.min.js
include/: Buffers.h  Client.h  Config.h  Dynamic.h  Error.h  Event.h  Hash.h  Job.h  List.h  Logger.h  Makefile.am  Map.h  Packet.h  Player.h  Plugin.h  Plugins.h  Regexp.h  ScriptingEngine.h  ScriptingEngines.h  Server.h  String.h  TimeLoop.h  Worker.h  Workers.h  common.h  javaendian.h  memory.h  minecraft.h  utils.h  version.h
include/bstring/: bsafe.h  bstraux.h  bstrlib.h  bstrwrap.h
include/craftd/: Arith.h  Arithmetic.h  Buffer.h  Buffers.h  Cache.h  Client.h  Config.h  Console.h  Error.h  Event.h  HTTPd.h  Hash.h  Job.h  List.h  Logger.h  Map.h  Packet.h  PacketLength.h  Player.h  Plugin.h  Plugins.h  Private.h  Protocol.h  Regexp.h  Server.h  Set.h  String.h  TimeLoop.h  Worker.h  Workers.h  common.h  config.h  config.h.in  extras.h  javaendian.h  lock.h  memory.h  minecraft.h  protocols.h  version.h
include/craftd/bstring/: bsafe.h  bstraux.h  bstrlib.h  bstrwrap.h
include/craftd/jansson/: jansson.h  jansson_config.h
include/craftd/klib/: kbtree.h  khash.h  khmm.h  klist.h  kmin.h  knetfile.h  knhx.h  kseq.h  ksort.h  kstring.h  kvec.h
include/craftd/protocols/: survival.h
include/craftd/protocols/survival/: Buffer.h  Logger.h  Packet.h  PacketLength.h  Player.h  Region.h  World.h  common.h  minecraft.h
include/jansson/: hashtable.h  jansson.h  jansson_config.h  jansson_private.h  strbuffer.h  utf.h
include/klib/: kbtree.h  khash.h  khmm.h  klist.h  kmin.h  knetfile.h  knhx.h  kseq.h  ksort.h  kstring.h  kvec.h
plugins/: Makefile.am  base.c  compile.sh  tests.c
plugins/admin/: admin.c  main.c
plugins/base/: base.c
plugins/beta/: callbacks.c  main.c
plugins/beta/include/: Buffer.h  Cache.h  Packet.h  Player.h  World.h  beta.h  callbacks.h  common.h  config.h  minecraft.h
plugins/beta/include/beta/: Cache.h  Packet.h  World.h  common.h  minecraft.h
plugins/beta/src/: Packet.c  PacketLength.c  Player.c  World.c
plugins/cdnbt/: cdnbt.c  itoa.c  itoa.h  nbt.c  nbt.h
plugins/commands/admin/: main.c
plugins/commands/admin/src/: auth.c  player.c  ticket.c  workers.c
plugins/http/: main.c
plugins/http/htdocs/: index.html  players_blacklist.html  schedule.html
plugins/http/htdocs/css/: jquery.jqplot.min.css
plugins/http/include/: HTTPd.h
plugins/http/src/: HTTPd.c
plugins/httpd/htdocs/: logs.html  settings.html
plugins/httpd/include/: HTTPd.h
plugins/httpd/src/: HTTPd.c
plugins/mapgen/: Makefile.am  craftd.c  mapgen.classic.c  mapgen.h  mapgen.trivial.c
plugins/mapgen/classic/: helpers.c  main.c
plugins/mapgen/mapgen/: classic.c  mapgen.c  mapgen_plugin.h
plugins/mapgen/noise/: cellular.c  cellular.h  sdnoise1234.h
plugins/mapgen/trivial/: main.c
plugins/nbt/: cdnbt.c  main.c  nbt.c
plugins/nbt/include/: config.h  itoa.h  nbt.h
plugins/persistence/nbt/: main.c
plugins/persistence/nbt/include/: buffer.h  list.h  nbt.h
plugins/persistence/nbt/src/: itoa.c  nbt.c
plugins/protocol/beta/: callbacks.c  main.c
plugins/protocol/beta/include/: Cache.h  Packet.h  Player.h  Region.h  World.h  minecraft.h
plugins/protocol/beta/src/: Buffer.c  PacketLength.c  Player.c  Region.c  World.c  minecraft.c
plugins/rpc/: main.c
plugins/survival/base/: callbacks.c  main.c
plugins/survival/commands/admin/: main.c
plugins/survival/commands/admin/src/: auth.c  ticket.c
plugins/survival/mapgen/: Makefile.am
plugins/survival/mapgen/classic/: helpers.c  main.c
plugins/survival/mapgen/noise/: Makefile.am  sdnoise1234.c
plugins/survival/mapgen/trivial/: main.c
plugins/survival/persistence/nbt/: helpers.c  main.c
plugins/survival/persistence/nbt/include/: nbt.h
plugins/survival/persistence/nbt/src/: nbt.c
plugins/survival/tests/: main.c
plugins/tests/: Makefile.am  main.c  tests.c
rake/: config.rb  makefile.rb  misc.rb
scripting/javascript/: helpers.c  main.c
scripting/javascript/include/: Client.h  Dynamic.h  Global.h  common.h
scripting/javascript/lib/: dispatcher.js
scripting/javascript/scripts/: joined.js
scripting/javascript/src/: Client.c  Dynamic.c  Global.c
scripting/lisp/: helpers.c  main.c
scripting/lisp/examples/: joined.lisp  joined.lsp
scripting/lisp/lib/: client.lisp  craftd.asd  dispatcher.lisp  dispatcher.lsp  dynamic.lisp  init.lsp  minecraft.lisp  player.lisp  server.lisp  server.lsp  string.lisp  wrap.lisp
scripting/lisp/scripts/: joined.asd
src/: Buffer.c  Buffers.c  Cache.c  Client.c  Config.c  Console.c  ConsoleLogger.c  Eid.h  Error.c  Error.h  Event.c  HTTPd.c  Hash.c  Job.c  Job.h  List.c  Logger.c  Makefile.am  Map.c  Packet.c  Packet.h  PacketLength.c  Player.c  Player.h  Plugin.c  Plugins.c  Private.c  Protocol.c  Regexp.c  ScriptingEngine.c  ScriptingEngines.c  Server.c  Set.c  String.c  SystemLogger.c  TimeLoop.c  Worker.c  Worker.h  Workers.c  Workers.h  (+26 more)
src/algos/: LICENSE-MIT  arith.h  set.c  set.h
src/mapgen/: classic.c  mapgen.c  mapgen.h  trivial.c
src/nbt/: nbt.c  nbt.h
src/network/: decoder.c  length.c  network-private.h  network.h  packets.h  process-common.c  process-game.c  process-proxy.c  process.c  proxy-send.c  send-common.c  send-game.c  send-proxy.c  send.c  worker-game.c  worker-proxy.c  worker.c
src/protocols/survival/: Buffer.c  Packet.c  PacketLength.c  Player.c  Region.c  World.c  main.c  minecraft.c
