pkginclude_HEADERS = craftd/common.h \
		     craftd/config.h \
		     craftd/Config.h \
		     craftd/Hash.h \
                     craftd/Buffer.h \
		     craftd/Buffers.h \
		     craftd/javaendian.h \
		     craftd/Job.h \
		     craftd/List.h \
		     craftd/Logger.h \
		     craftd/Map.h \
		     craftd/memory.h \
		     craftd/minecraft.h \
		     craftd/Packet.h \
		     craftd/Player.h \
		     craftd/Plugin.h \
		     craftd/Plugins.h \
		     craftd/Regexp.h \
		     craftd/Server.h \
		     craftd/String.h \
		     craftd/TimeLoop.h \
		     craftd/version.h \
		     craftd/Worker.h \
		     craftd/Workers.h

# bstring headers
bstringdir = $(pkgincludedir)/bstring
bstring_HEADERS = craftd/bstring/bsafe.h \
		  craftd/bstring/bstraux.h \
		  craftd/bstring/bstrlib.h \
		  craftd/bstring/bstrwrap.h

# jansson headers
janssondir = $(pkgincludedir)/jansson
jansson_HEADERS = craftd/jansson/jansson.h \
		  craftd/jansson_config.h

# klib headers
klibdir = $(pkgincludedir)/klib
klib_HEADERS = craftd/klib/kbtree.h \
	       craftd/klib/khash.h \
	       craftd/klib/khmm.h \
	       craftd/klib/klist.h \
	       craftd/klib/kmin.h \
	       craftd/klib/knetfile.h \
	       craftd/klib/knhx.h \
	       craftd/klib/kseq.h \
	       craftd/klib/ksort.h \
	       craftd/klib/kstring.h \
	       craftd/klib/kvec.h
