pkginclude_HEADERS = craftd/Arithmetic.h \
		     craftd/common.h \
		     craftd/config.h \
		     craftd/Config.h \
			 craftd/Cache.h \
		     craftd/Console.h \
		     craftd/Event.h \
		     craftd/Hash.h \
		     craftd/Buffer.h \
		     craftd/Buffers.h \
		     craftd/javaendian.h \
		     craftd/Job.h \
		     craftd/List.h \
		     craftd/Logger.h \
		     craftd/Map.h \
		     craftd/memory.h \
		     craftd/Plugin.h \
		     craftd/Plugins.h \
			 craftd/Private.h \
		     craftd/Regexp.h \
		     craftd/Server.h \
		     craftd/Set.h \
		     craftd/String.h \
		     craftd/TimeLoop.h \
		     craftd/version.h \
		     craftd/Worker.h \
		     craftd/Workers.h

bstringdir = $(pkgincludedir)/bstring
bstring_HEADERS = craftd/bstring/bsafe.h \
		  craftd/bstring/bstraux.h \
		  craftd/bstring/bstrlib.h \
		  craftd/bstring/bstrwrap.h

klibdir = $(pkgincludedir)/klib
klib_HEADERS = craftd/klib/kbtree.h \
	       craftd/klib/khash.h \
	       craftd/klib/khmm.h \
	       craftd/klib/klist.h \
	       craftd/klib/kmin.h \
	       craftd/klib/knetfile.h \
	       craftd/klib/knhx.h \
	       craftd/klib/kseq.h \
	       craftd/klib/ksort.h \
	       craftd/klib/kstring.h \
	       craftd/klib/kvec.h
