# Various noise generators
noinst_LTLIBRARIES = libnoise_cell.la libnoise_std.la libnoise_sd.la libnoise_simplex.la libnoise_srd.la
libnoise_cell_la_SOURCES = cellular.c cellular.h
libnoise_std_la_SOURCES = noise1234.c noise1234.h
libnoise_sd_la_SOURCES = sdnoise1234.c sdnoise1234.h
libnoise_simplex_la_SOURCES = simplexnoise1234.c simplexnoise1234.h
libnoise_srd_la_SOURCES = srdnoise23.c srdnoise23.h
